--- a/src/OnLoad.css
+++ b/src/OnLoad.css
@@ -1,122 +1,122 @@
 .wrapper {
-    height: 100vh;
-    /* background-color: bisque; */
-    position: relative;
+	height: 100vh;
+	/* background-color: bisque; */
+	position: relative;
+	overflow: hidden;
 }
-.textContainer{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    font-size: 4.5rem;
-    opacity: 0;
-    animation: showText 2s forwards ease-in;
+.textContainer {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
+	font-size: 4.5rem;
+	opacity: 0;
+	animation: showText 2s forwards ease-in;
 }
 
 @media only screen and (max-width: 600px) {
-    .textContainer{
-        font-size: 3rem;
-    }
+	.textContainer {
+		font-size: 3rem;
+	}
 }
 .line1 {
-    width: 1750px;
-    height: 33.33333333%;
-    animation: inFromRight 3s linear forwards;
-    transform: translateX(100%), rotate(45deg);
-    object-fit: fill;
+	width: 1750px;
+	height: 33.33333333%;
+	animation: inFromRight 3s linear forwards;
+	transform: translateX(100%), rotate(45deg);
+	object-fit: fill;
 }
 
 .line2 {
-    width: 1750px;
-    height: 33.33333333%;
-    /* animation: inFromLeft 3.7s linear forwards; */
-    transform: translateX(-100%);
-    object-fit: fill;
-    opacity: 0;
-    
+	width: 1750px;
+	height: 33.33333333%;
+	/* animation: inFromLeft 3.7s linear forwards; */
+	transform: translateX(-100%);
+	object-fit: fill;
+	opacity: 0;
 }
 
 .line3 {
-    width: 1750px;
-    height: 33.33333333%;
-    animation: inFromLeft 3s linear forwards;
-    transform: translateX(-100%);
+	width: 1750px;
+	height: 33.33333333%;
+	animation: inFromLeft 3s linear forwards;
+	transform: translateX(-100%);
 }
 
 .flag {
-    border: 2px solid transparent;
-    display: inline-block;
-    height: 100%;
-    width: 350px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    border-radius: 10px;
-    /* opacity: .7; */
-    /* filter: grayscale(50%); */
+	border: 2px solid transparent;
+	display: inline-block;
+	height: 100%;
+	width: 350px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	border-radius: 10px;
+	/* opacity: .7; */
+	/* filter: grayscale(50%); */
 }
 
-@keyframes showText{
-    0% {
-        opacity: 0;
-    }
-    20% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 1;
-    }
+@keyframes showText {
+	0% {
+		opacity: 0;
+	}
+	20% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 1;
+	}
 }
 
 @keyframes inFromRight {
-    0% {
-        opacity: 0;
-        transform: translateX(100%);
-    }
-    25% {
-        opacity: 1;
-        transform: translateX(50%);
-    }
-    50% {
-        opacity: 1;
-        transform: translateX(0);
-    }
-    75% {
-        opacity: 1;
-        transform: translateX(-50%);
-    }
-    85% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-        transform: translateX(-100%);
-    }
+	0% {
+		opacity: 0;
+		transform: translateX(100%);
+	}
+	25% {
+		opacity: 1;
+		transform: translateX(50%);
+	}
+	50% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+	75% {
+		opacity: 1;
+		transform: translateX(-50%);
+	}
+	85% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+		transform: translateX(-100%);
+	}
 }
 
 @keyframes inFromLeft {
-    0% {
-        opacity: 0;
-        transform: translateX(-100%);
-    }
-    25% {
-        opacity: 1;
-        transform: translateX(-50%);
-    }
-    50% {
-        opacity: 1;
-        transform: translateX(0);
-    }
-    75% {
-        opacity: 1;
-        transform: translateX(50%);
-    }
-    85% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-        transform: translateX(100%);
-    }
+	0% {
+		opacity: 0;
+		transform: translateX(-100%);
+	}
+	25% {
+		opacity: 1;
+		transform: translateX(-50%);
+	}
+	50% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+	75% {
+		opacity: 1;
+		transform: translateX(50%);
+	}
+	85% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+		transform: translateX(100%);
+	}
 }
